# DesktopOjisan

./: README.md
.claude/: settings.local.json
Assets/Scripts/: WindowController.cs
Assets/Scripts/Core/: CharacterMover.cs  FrameRateLimiter.cs  GameManager.cs
Assets/Scripts/Editor/: UISetupEditor.cs
Assets/Scripts/Server/: ApiServer.cs
Assets/Scripts/UI/: CommandButtonUI.cs  CommandMenuUI.cs  OjisanDialogUI.cs
NativePlugin/: CMakeLists.txt  WindowController.cpp  build.bat
Tools/: test_api.bat  test_api.ps1
spec/: 01_概要.md  02_ゲームフロー.md  03_reaction_system.md  04_イベントシステム.md  05_practice_problems.md  06_開発時間トラッキング.md  07_external_integrations.md  08_api_server.md  09_ui_system.md  10_command_system.md  11_game_manager.md  README.md  TODO.md
spec/code/: ApiServer.md  GameManager.md  WindowController.md
spec/code/UI/: CommandButtonUI.md  CommandMenuUI.md  OjisanDialogUI.md
spec/gamedesign/: GameParameterDef.toml  ReactionDef.toml  ojisan.md
spec/rule/: coding.md  gamerule.md  general.md
spec/test/: api.md  feature.md  performance.md
spec/ubi/: ubiquitous.yaml
spec/usecase/: api_usage.md  interaction.md
spec/ux/: ux_design.md
